# datawalk

./: .gitignore  .pre-commit-config.yaml  .prototools  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml  test.yml
src/datawalk/: __init__.py
src/datawalk/selectors/: all.py  by_key.py  by_slice.py  first.py  picker.py
tests/datawalk/: test_datawalk.py
tests/datawalk/selectors/: test_picker.py
